test/message/vm_dont_display_runtime_error.chakracore.out
beginning
middle
vm.js:*
    return realRunInThisContext.call(this, options);
    ^

Error: boo!
   at Global code (test.vm:*)
   at Script.prototype.runInThisContext (vm.js:*:*)      
   at runInThisContext (vm.js:*)
   at Anonymous function (*test*message*vm_dont_display_runtime_error.js:*)
   at Module.prototype._compile (module.js:*)
   at Module._extensions[.js] (module.js:*)
   at Module.prototype.load (module.js:*)
   at tryModuleLoad (module.js:*)
   at Module._load (module.js:*)
   at Module.runMain (module.js:*)